mreo refs; cjk font update

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -2310,6 +2310,26 @@ for constructive, predicative and classical analysis.},
   year       = {1975},
 }
 
+@article{Knuth:1979:MathTypography,
+author = {Donald E. Knuth},
+title = {{Mathematical typography}},
+volume = {1},
+journal = {Bulletin (New Series) of the American Mathematical Society},
+number = {2},
+publisher = {American Mathematical Society},
+pages = {337 -- 372},
+year = {1979},
+URL = {https://projecteuclid.org/journals/bulletin-of-the-american-mathematical-society-new-series/volume-1/issue-2/Mathematical-typography/bams/1183544082.full?tab=ArticleLink}
+}
+
+@book{Kraus:1991:BrushesWithPower,
+author={Kraus, Richard Curt},
+title={Brushes with power: modern politics and the {Chinese} art of calligraphy},
+year=1991,
+publisher={University of California Press},
+url={https://www.ucpress.edu/book/9780520072855/brushes-with-power},
+}
+
 @Article{Kreisel:1968:ProofTheory,
   author    = {G. Kreisel},
   title     = {A Survey of Proof Theory},
@@ -3379,6 +3399,14 @@ url={https://www.typemag.org/post/it-all-starts-with-writing-gerrit-noordzij},
   pages     = {681--690},
   publisher = {{IEEE} Comp. Soc. Press},
   year      = {1991},
+}
+
+@book{MoteChu:1989:CalligraphyEABook,
+author={Frederick W. Mote and Hung-lam Chu},
+title={Calligraphy and the {East Asian} book},
+editor={Howard L. Goodman},
+year=1989,
+publisher={Shambhala},
 }
 
 @Book{MullerEtal:2010:FPHandbook,
@@ -5225,6 +5253,11 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
   title  = {Inverse function theorem},
   url    = {https://en.wikipedia.org/w/index.php?title=Inverse_function_theorem},
 }
+@online{wiki:TypoConventionsMath,
+    author = "{Wikipedia}",
+    title = "Typographical conventions in mathematical formulae",
+    url = "https://en.wikipedia.org/w/index.php?title=Typographical_conventions_in_mathematical_formulae&oldid=1004051705",
+  }
 
 @Online{BWilliams:AlgebraicAtructureAndProtocols,
   author = {Brandon Williams},
