--- a/tex/latex/PalisadesLakes/typesetting.tex
+++ b/tex/latex/PalisadesLakes/typesetting.tex
@@ -52,7 +52,7 @@ their choices. Indirect sources suggest that in ISO 80000-2
 most symbols are set in italic, which I find difficult to read,
 and believe should be restricted, if used at all, to placing
 emphasis on very short pieces of text, on the order of a word
-or short phrase.
+or short phrase.~\cite{wiki:TypoConventionsMath}
 And even in that case, and contrary to most
 advice I've seen, I prefer slanted faces to italic
 (one agreeing opinion, for text at least: 
