--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -211,6 +211,27 @@
   year      = {1996},
 }
 
+@Article{BeetonPalais:2016:CMT,
+  author =       "Barbara Beeton and Richard Palais",
+  title =        "Communication of Mathematics with {\TeX}",
+  journal =      {Visible Language},
+  volume =       "50",
+  number =       "2",
+  year =         "2016",
+  URL =          "http://visiblelanguage.herokuapp.com/issue/202/article/1362",
+  note={\\\textsc{pdf}: \url{http://www.ams.org/publications/authors/Communication_of_Mathematics_with_TEX.pdf}},
+  abstract =     "Mathematics publication has changed radically over the
+                 past 50 years, for both authors and publishers. What
+                 once required a skilled compositor to produce can now
+                 be accomplished, with the aid of computers and
+                 software, directly by authors. One key component of
+                 this change is the {\TeX} typesetting program. This
+                 software, designed by a mathematically discriminating
+                 computer scientist and made freely available, is now in
+                 operation on nearly every computer system in common
+                 use.",
+                 }
+                 
 @phdthesis{Beier:2009:Legibility,
 title = {Typeface Legibility: Towards defining familiarity},
 abstract = {
@@ -451,6 +472,24 @@ publisher = "BIS Publishers",
   url    = {http://vis.stanford.edu/protovis/ex/cartogram.html},
   year   = {2011},
 }
+
+@article{Bouche:2003:DiversityMathFonts,
+  title={Diversity in math fonts},
+  author={Thierry Bouche},
+  year={1998},
+  journal={{TUGBoat}},
+  volume=19,
+  number=2,
+  url={https://www.tug.org/TUGboat/tb19-2/tb59bouc.pdf},
+}
+
+@online{Braille:2021:AtkinsonHyperlegible,
+author={{Braille Institute}},
+year={2021},
+title={Atkinson Hyperlegible Font},
+url={https://brailleinstitute.org/freefont},
+}
+Atkinson Hyperlegible with Craig Dobie, Brad Scott, and Elliott Scott
 
 @Article{Brent:1978:FMA,
   author     = {Brent, Richard P.},
@@ -1009,6 +1048,13 @@ url={http://luc.devroye.org/fonts-24699.html},
   year    = {2002},
 }
 
+@online{DobieScottScott:2021:AtkinsonHyperlegible,
+author={Craig Dobie and Brad Scott and Elliott Scott},
+title={Atkinson Hyperlegible},
+year={2021},
+url={https://vimeo.com/515592681},
+}
+
 @Article{DobkinLevyThurstonWilks:1990:Contour,
   author  = {David P. Dobkin and Silvio V. F. Levy and William P. Thurston and Allan R. Wilks},
   title   = {Contour Tracing by Piecewise Linear Approximations},
@@ -1184,6 +1230,13 @@ matrices.},
   title     = {From Kant to Hilbert: A Source Book in the Foundations of Mathematics, 2 volumes},
   publisher = {Oxford U Press},
   year      = {2005},
+}
+
+@online{Eye:2012:MonotypeTimeline,
+author={{Eye editors}},
+title={A Monotype timeline},
+year={2012},
+url={http://www.eyemagazine.com/feature/article/a-monotype-timeline},
 }
 
 @InProceedings{FangGossard:1992:CurvesSurfaces,
@@ -1461,6 +1514,11 @@ for constructive, predicative and classical analysis.},
   eprint        = {1803.05316},
   primaryclass  = {math.CT},
   year          = {2018},
+}
+
+@online{FontLab:2021,
+title={{FontLab} 7},
+url={https://www.fontlab.com/},
 }
 
 @Article{FortuneVanWyk:1996:IntCompGeom,
@@ -2320,6 +2378,23 @@ publisher = {American Mathematical Society},
 pages = {337 -- 372},
 year = {1979},
 URL = {https://projecteuclid.org/journals/bulletin-of-the-american-mathematical-society-new-series/volume-1/issue-2/Mathematical-typography/bams/1183544082.full?tab=ArticleLink}
+}
+
+@book{Krantz:2001:MathTypography,
+  title={Handbook of Typography for the Mathematical Sciences},
+  author={Krantz, S.G.},
+  series={Studies in Advanced Mathematics},
+  url={https://books.google.com/books?id=ElTYnQEACAAJ},
+  year={2001},
+  publisher={Taylor \& Francis},
+  note={only read kindle sample; 
+  seems to be essentially a {\TeX} manual,
+  somewhat dated even for 2001,
+  plus fairly arbitrary prescriptions, for example:
+  prefer $E(i_{1},\ldots,i_{m};j_{1},\ldots,j_{n})$
+  to $E^{i_{1},\ldots,i_{m}}_{j_{1},\ldots,j_{n}}$,
+  which I think depends on context and how well formatted
+  the two expressions are.},
 }
 
 @book{Kraus:1991:BrushesWithPower,
@@ -3493,6 +3568,15 @@ publisher={Shambhala},
   year      = {1987},
 }
 
+@book{Noordzij:2006:TheStroke,
+author = {Noordzij, Gerrit},
+translator={Enneson, Peter},
+title = {The Stroke: Theory of Writing},
+year = {2006},
+publisher = {Hyphen},
+note={originally published in Dutch 1982. not yet read, in any edition},
+}
+
 @Book{Norvig:1992:Paradigms,
   author    = {Norvig, P.},
   title     = {Paradigms of artificial intelligence programming: case studies in common lisp},
@@ -4173,6 +4257,13 @@ note = { Transcript at
   year      = {1976},
 }
 
+@online{Smith:2017:MathTypography,
+author={Eddie Smith},
+title={From boiling lead and black art: An essay on the history of mathematical typography},
+year={2017},
+url={http://www.practicallyefficient.com/2017/10/13/from-boiling-lead-and-black-art.html},
+}
+
 @Article{SolinaBajcsy:1990:Superquadrics,
   author  = {Solina, Franc and Bajcsy, Ruzena},
   title   = {Recovery of Parametric Models from Range Images: The Case for Superquadrics with Global Deformations},
@@ -4257,7 +4348,7 @@ note = { Transcript at
 author={Ellen Swanson and Arlene {O'Sean} and Antoinette Schleyer},
 title={Mathematics into Type},
 year={1999},
-edition={Updated},
+edition={Updated edition},
 publisher={American Mathematical Society},
 url={http://www.ams.org/arc/styleguide/mit-2.pdf},
 }
@@ -5256,7 +5347,7 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
 @online{wiki:TypoConventionsMath,
     author = "{Wikipedia}",
     title = "Typographical conventions in mathematical formulae",
-    url = "https://en.wikipedia.org/w/index.php?title=Typographical_conventions_in_mathematical_formulae&oldid=1004051705",
+    url = "https://en.wikipedia.org/w/index.php?title=Typographical_conventions_in_mathematical_formulae",
   }
 
 @Online{BWilliams:AlgebraicAtructureAndProtocols,
