--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -111,8 +111,16 @@
 \NewDocumentCommand {\geomHDTV} {} {
  \geomDefault
  \geometry{margin=2cm,paperheight=352mm,paperwidth=198mm,} }
- % rough size and aspect for traditional math books
- % TODO: margins should be bigger and two-sided assymetric
+% roughly half a screen, intended for
+% single column portrait, either occupying half the screen or
+% 2 page side by side full screen.
+\NewDocumentCommand {\geomHalfDTV} {} {
+ \hypersetup{pdfpagelayout=TwoPageLeft,}
+ \geomDefault
+ \geometry{margin=2cm,paperheight=272mm,paperwidth=224mm,} }
+
+% rough size and aspect for traditional math books
+% TODO: margins should be bigger and two-sided assymetric
 \NewDocumentCommand {\geomTextbook} {} {
  \geomDefault
  \geometry{margin=2cm,paperheight=220mm,paperwidth=150mm,} }
