--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -4871,6 +4871,11 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
   url    = {https://en.wikipedia.org/w/index.php?title=Outline_of_algebraic_structures},
 }
 
+@online{wiki:Pangram,
+    author = {Wikipedia},
+    title = {Pangram},
+    url = "https://en.wikipedia.org/w/index.php?title=Pangram",
+  }
 @Online{wiki:Polynomial,
   author = {Wikipedia},
   title  = {Polynomial},
