a couple more refs

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -2560,6 +2560,17 @@ it need not rely upon any set-theoretic underpinning.}},
   year      = {1991},
 }
 
+@article{Lawrence:2003:MathsTypography,
+author={Richard Lawrence},
+title={Maths = Typography},
+year={2003},
+journal={{TUGBoat}},
+volume=24,
+number=2,
+pages={165--167},
+url={https://www.tug.org/TUGboat/tb24-2/tb77lawrence.pdf},
+}
+
 @Online{Lawrence:2017:Rationals,
   author = {Stephen A. Lawrence},
   title  = {The Rational Numbers},
@@ -3886,7 +3897,7 @@ url={http://ultrasparky.org/school/pdf/DanielRhatigan_Gina_specimen.pdf},
 author={Daniel Rhatigan},
 title = {Three typefaces for a mathematics:
 the development of {Times 4-line Mathematics Series 569},
-{AMS Euler}, and {Cambria Math}},
+{\textsc{ams} Euler}, and {Cambria Math}},
 year={2007},
 institution = {University of Reading},
 type={Dissertation for {MA} in {Type Design}},
@@ -5199,6 +5210,12 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
   title  = {Set theory},
   url    = {https://en.wikipedia.org/w/index.php?title=Set_theory},
 }
+
+@omline{ wiki:TimesNewRoman4lineMathSeries569,
+    author = {Wikipedia},
+    title = {Times New Roman},
+    url = {https://en.wikipedia.org/wiki/Times_New_Roman#Times_4-line_Mathematics_Series_569},
+  }
 
 @Online{wiki:TuringPL,
   author = {Wikipedia},
