--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -489,7 +489,6 @@ year={2021},
 title={Atkinson Hyperlegible Font},
 url={https://brailleinstitute.org/freefont},
 }
-Atkinson Hyperlegible with Craig Dobie, Brad Scott, and Elliott Scott
 
 @Article{Brent:1978:FMA,
   author     = {Brent, Richard P.},
@@ -1035,7 +1034,7 @@ refine cortical organization.},
 @online{Devroye:2014:Noordzij,
 author={Luc Devroye},
 title={Gerrit Noordzij},
-year = {2014?},
+year = {2014},
 url={http://luc.devroye.org/fonts-24699.html},
 }
 
@@ -2759,7 +2758,6 @@ the accuracy of the intermediate evaluations.},
 @book{LetourneauSharp:2017:AMSStyleGuide,
 title={{AMS} Style Guide Journals},
 year={2017},
-month={October},
 author={Mary Letourneau and Jennifer Wright Sharp},
 publisher={American Mathematical Society},
 url={http://www.ams.org/arc/styleguide/index.html},
@@ -3420,6 +3418,16 @@ url={https://www.typemag.org/post/it-all-starts-with-writing-gerrit-noordzij},
   year    = {1991},
 }
 
+@book{MillsHudsonLawrenceSargent:2007:MSMathTypesetting,
+author={Ross Mills and John Hudson and Richard Lawrence and Murray Sargent},
+title={Mathematical Typesetting:
+Mathematical and Scientific
+Typesetting Solutions from {Microsoft}},
+year=2007,
+publisher={Microsoft},
+url={http://tiro.com/Articles/mathematical_typesetting.pdf},
+}
+
 @Book{Minsky:1965:InfiniteMachines,
   author    = {Marvin Minsky},
   title     = {Computation: Finite and Infinite Machines},
@@ -3553,6 +3561,15 @@ publisher={Shambhala},
   journal   = {Journal of Symbolic Logic},
   publisher = {Cambridge U Press},
   year      = {1975},
+}
+
+@phdthesis{Nikerson:2014:PrintedMath,
+author={Sylvia M. Nickerson},
+title={Paper Index of the Mind:
+The Book and Printed Culture of Mathematics
+in England and Canada, 1830--1930},
+institution={U of Toronto},
+year={2014},
 }
 
 @Article{NielsonEtal:1991:Visualizing,
