a couple more refs

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -4544,6 +4544,15 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
   year      = {1989},
 }
 
+@book{Tracy:1986:LettersOfCredit,
+  title={Letters of Credit: A View of Type Design},
+  author={Walter Tracy},
+  url={https://books.google.com/books?id=y8NssjbqNcsC},
+  year={1986},
+  publisher={D.R. Godine},
+  note={unread},
+}
+
 @Article{Turing:1936:Computability,
   author  = {{Alan Mathison} Turing},
   title   = {On Computable Numbers, with an Application to the {Entscheidungsproblem}},
@@ -5228,12 +5237,18 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
   url    = {https://en.wikipedia.org/w/index.php?title=Set_theory},
 }
 
-@omline{ wiki:TimesNewRoman4lineMathSeries569,
+
+@online{ wiki:TimesNewRoman,
+    author = {Wikipedia},
+    title = {Times New Roman},
+    url = {https://en.wikipedia.org/wiki/Times_New_Roman},
+  }
+
+@online{ wiki:TimesNewRoman4lineMathSeries569,
     author = {Wikipedia},
     title = {Times New Roman},
     url = {https://en.wikipedia.org/wiki/Times_New_Roman#Times_4-line_Mathematics_Series_569},
   }
-
 @Online{wiki:TuringPL,
   author = {Wikipedia},
   title  = {Turing (programming language)},
