more Knuth refs; quick fix of page headers

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -211,6 +211,26 @@
   year      = {1996},
 }
 
+@article{Beebe:2005:DesignTexMetafont,
+title={The design of TEX and METAFONT: A retrospective},
+author={Nelson H. F. Beebe},
+year={2005},
+journal={{TUGBoat}},
+volume={26},
+number={1},
+url={http://www.math.utah.edu/~beebe},
+}
+
+@techreport{BeetonEtAl:2014:UnicodeMath,
+author=
+{Barbara Beeton and Asmus Freytag and Murray Sargent},
+title={Unicode support for mathematics},
+year={2014},
+number={25},
+institution={unicode.org},
+url={http://unicode.org/L2/L2015/15215-tr25-14.pdf},
+}
+
 @Article{BeetonPalais:2016:CMT,
   author =       "Barbara Beeton and Richard Palais",
   title =        "Communication of Mathematics with {\TeX}",
@@ -856,6 +876,16 @@ engineering, economics and biology --- but will also appeal to postgraduates
 who have not previously covered this area, or wish to switch to using
 R.},
   year      = {2005},
+}
+
+@article{Crossland:2008:WhyMetafontDidntCatchOn,
+title={Why didn't {METAFONT} catch on?},
+author={Dave Crossland},
+year={2008},
+journal={{TUGBoat}},
+volume={29},
+number={3},
+url={https://www.tug.org/TUGboat/tb29-3/tb93crossland.pdf},
 }
 
 @Article{CribarinetoZarkos:1999,
@@ -1824,6 +1854,15 @@ url={https://www.fontlab.com/},
   year   = {2012},
 }
 
+@article{HagenEtAL:2008:ReshapingEuler,
+journal={{TUGboat}}, 
+volume={29},
+year={2008}, 
+number={2},
+title={Reshaping {Euler}: A collaboration with {Hermann Zapf}},
+author={Hans Hagen and Taco Hoekwater and {Volker RW} Schaa},
+}
+
 @Book{Halloway:2009:Clojure,
   author    = {Halloway, Stuart},
   title     = {Programming Clojure},
@@ -2377,6 +2416,26 @@ publisher = {American Mathematical Society},
 pages = {337 -- 372},
 year = {1979},
 URL = {https://projecteuclid.org/journals/bulletin-of-the-american-mathematical-society-new-series/volume-1/issue-2/Mathematical-typography/bams/1183544082.full?tab=ArticleLink}
+}
+
+@article{Knuth:1982:MetafontConcept,
+author = {Donald E. Knuth},
+title = {{The Concept of a Meta-Font}},
+volume = {{|XVI}},
+journal = {Visible Language},
+number = {1},
+pages = {3--27},
+year = {1982},
+}
+
+@article{Knuth:1989:TypesettingConcreteMath,
+journal={TUGboat}, 
+Volume={10},
+year={1989}, 
+number={1},
+title={Typesetting {Concrete Mathematics}},
+author={Donald E. Knuth},
+url={http://www.tug.org/TUGboat/tb10-1/tb23knut.pdf},
 }
 
 @book{Krantz:2001:MathTypography,
@@ -3038,6 +3097,21 @@ The paper closes with some philosophical remarks.},
   year        = {2001},
 }
 
+@article{McCarthy:2020:StanfordDigitalTypography,
+title = {Digital Typography at Stanford},
+journal = {She Ji: The Journal of Design, Economics, and Innovation},
+volume = {6},
+number = {4},
+pages = {546-560},
+year = {2020},
+issn = {2405-8726},
+doi = {https://doi.org/10.1016/j.sheji.2020.08.006},
+url = {https://www.sciencedirect.com/science/article/pii/S240587262030068X},
+author = {Steven McCarthy},
+keywords = {Typography, Design education, Design history, Digitization, Stanford University, Charles Bigelow},
+abstract = {This article investigates the short lived digital typography graduate program formed between Stanford University’s Departments of Art and Computer Science, which began in 1982 and ended in 1988. The program leveraged the design skills of typographer Charles Bigelow with the software mastery of computer scientist and mathematician Donald Knuth. Besides educating graduate students who would go on to create numerous typeface designs for Adobe in Silicon Valley, they collaborated on an applied research project for the American Mathematical Society with eminent typographer Hermann Zapf. Bigelow’s historicist approach to type design aesthetics in the face of cutting-edge technology and postmodern design—both in his teaching and commercial typeface design—and the lack of interaction between the digital typography program and Stanford’s Joint Program in Design (shared between Mechanical Engineering and Art) may have contributed to the demise of digital typography at Stanford University. Still, its influence was wide ranging and impactful.}
+}
+
 @Misc{McDonald:1982:OrionExploring,
   author = {McDonald, John Alan},
   title  = {Exploring Data with the {Orion I} Workstation},
@@ -3563,7 +3637,7 @@ publisher={Shambhala},
   year      = {1975},
 }
 
-@phdthesis{Nikerson:2014:PrintedMath,
+@phdthesis{Nickerson:2014:PrintedMath,
 author={Sylvia M. Nickerson},
 title={Paper Index of the Mind:
 The Book and Printed Culture of Mathematics
@@ -5153,6 +5227,11 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
   url    = {https://en.wikipedia.org/w/index.php?title=Limit_ordinal},
 }
 
+@online{ wiki:Metafont,
+    author = {{Wikipedia}},
+    title = {Metafont},
+    url = {https://en.wikipedia.org/w/index.php?title=Metafont},
+  }
 @Online{wiki:ModalLogic,
   author = {Wikipedia},
   title  = {Modal logic},
