--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -4910,6 +4910,12 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
   url    = {https://en.wikipedia.org/w/index.php?title=Axiom_Of_power_set},
 }
 
+@online{wiki:ClearType,
+    author = {{Wikipedia}},
+    title = {{ClearType}},
+    url = {https://en.wikipedia.org/w/index.php?title=ClearType&oldid=1013035817},
+  }
+
 @Online{wiki:ConstantRankTheorem,
   author = {Wikipedia},
   title  = {Constant rank theorem},
