more refs; format all (most?) titles as non-italic, no quotes.

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -866,6 +866,14 @@ year={1954},
   year      = {2009},
 }
 
+@phdthesis{Coueignoux:1975:GenerationOfFonts,
+title={Generation of {Roman} printed fonts},
+author={Philippe J. M. Coueignoux},
+year={1975},
+institution={{MIT}},
+url={https://dspace.mit.edu/handle/1721.1/27408},
+}
+
 @Book{Crawley:2005:R,
   author    = {Michael J. Crawley},
   title     = {Statistics: An Introduction using R},
