--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -3678,10 +3678,24 @@ year={2014},
   year      = {1987},
 }
 
+@inproceedings{Noordzij:1991:TheShapeOfTheStroke,
+author = {Noordzij, Gerrit},
+title = {The Shape of the Stroke},
+year = {1991},
+publisher = {Cambridge U Press},
+address = {USA},
+booktitle = {Conference Proceedings on Raster Imaging and Digital Typography II},
+pages = {34–42},
+numpages = {9},
+location = {Boston, Massachusetts, USA},
+series = {RIDT 91},
+url={https://typemedia.org/assets/download/The Shape of the Stroke, RIDT 1991, pp 34-42_low.pdf},}
+
 @book{Noordzij:2006:TheStroke,
 author = {Noordzij, Gerrit},
 translator={Enneson, Peter},
-title = {The Stroke: Theory of Writing},
+title = {The Stroke},
+subtitle = {Theory of Writing},
 year = {2006},
 publisher = {Hyphen},
 note={originally published in Dutch 1982. not yet read, in any edition},
@@ -4454,6 +4468,38 @@ url={http://www.practicallyefficient.com/2017/10/13/from-boiling-lead-and-black-
   year      = {1991},
 }
 
+@book{SussmanWisdom:2013:FunctionalDifferentialGeometry,
+author = {Sussman, Gerald Jay and Wisdom, Jack and Farr, Will},
+title = {Functional Differential Geometry},
+year = {2013},
+publisher = {The MIT Press},
+abstract = 
+{Physics is naturally expressed in mathematical language. 
+Students new to the subject must simultaneously learn 
+an idiomatic mathematical language 
+and the content that is expressed in that language. 
+It is as if they were asked to read Les Misrables 
+while struggling with French grammar. 
+This book offers an innovative way 
+to learn the differential geometry 
+needed as a foundation for a deep understanding 
+of general relativity or quantum field theory 
+as taught at the college level. 
+The approach taken by the authors 
+(and used in their classes at MIT for many years) 
+differs from the conventional one in several ways, 
+including an emphasis on the development 
+of the covariant derivative 
+and an avoidance of the use of traditional index notation 
+for tensors in favor of a semantically richer language 
+of vector fields and differential forms. 
+But the biggest single difference is the authors' integration 
+of computer programming into their explanations. 
+By programming a computer to interpret a formula, 
+the student soon learns whether or not a formula is correct. 
+Students are led to improve their program, 
+and as a result improve their understanding.}
+}
 @book{Swanson:1999:MathIntoType,
 author={Ellen Swanson and Arlene {O'Sean} and Antoinette Schleyer},
 title={Mathematics into Type},
