--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -3678,8 +3678,16 @@ year={2014},
   year      = {1987},
 }
 
+@book{Noordzij:1982:TheStrokeOfThePen,
+author = {Gerrit Noordzij},
+  title={The Stroke of the Pen: Fundamental Aspects of Western Writing},
+  year={1982},
+  publisher={{Koninklijke Academie van Beeldende Kunsten}},
+  note={unread as of 2021-04-03},
+}
+
 @inproceedings{Noordzij:1991:TheShapeOfTheStroke,
-author = {Noordzij, Gerrit},
+author = {Gerrit Noordzij},
 title = {The Shape of the Stroke},
 year = {1991},
 publisher = {Cambridge U Press},
@@ -3691,14 +3699,25 @@ location = {Boston, Massachusetts, USA},
 series = {RIDT 91},
 url={https://typemedia.org/assets/download/The Shape of the Stroke, RIDT 1991, pp 34-42_low.pdf},}
 
+@book{Noordzij:2000:LetterLetter,
+  title={Letterletter: An Inconsistent Collection of Tentative Theories that Do Not Claim Any Other Authority Than that of Common Sense},
+author = {Gerrit Noordzij},
+  isbn={9780881791754},
+  lccn={00049871},
+  url={https://books.google.com/books?id=L6AQAQAAMAAJ},
+  year={2000},
+  publisher={Hartley \& Marks},
+  note={unread as of 2021-04-03},
+}
+
 @book{Noordzij:2006:TheStroke,
-author = {Noordzij, Gerrit},
+author = {Gerrit Noordzij},
 translator={Enneson, Peter},
 title = {The Stroke},
 subtitle = {Theory of Writing},
 year = {2006},
 publisher = {Hyphen},
-note={originally published in Dutch 1982. not yet read, in any edition},
+note={Out of print. Only read p.~1--18 sample pdf},
 }
 
 @Book{Norvig:1992:Paradigms,
