bib updates; de-bold description items

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -2379,6 +2379,13 @@ author={Hans Hagen and Taco Hoekwater and {Volker RW} Schaa},
   year      = {1991},
 }
 
+@online{Kinross:2002:NoordzijBib,
+author={Robin Kinross},
+year={2002},
+title={Gerrit Noordzij: Bibliography},
+url={https://typemedia.org/noordzij/bibliography.html},
+}
+
 @Online{iep:PropositionalLogic,
   author = {Kevin C. Klement},
   title  = {{Propositional Logic}},
@@ -3013,13 +3020,13 @@ year=1998
   year    = {1992},
 }
 
-@InCollection{manetal90,
+@InCollection{MannEtAl:1990:TriInterpolants,
   author    = {S. Mann and M. Lounsbery and C. Loop and D. Meyers and J. Painter and T. DeRose and K. Sloan},
   booktitle = {Surfaces in Geometric Design},
   title     = {A Survey of Parametric Scattered Data Fitting Using Triangular Interpolants},
   editor    = {H. Hagen},
   publisher = {{SIAM}},
-  year      = {to appear},
+  year      = {1990},
 }
 
 @TechReport{MarinSmith:1990:ODRSplines,
@@ -3678,6 +3685,13 @@ year={2014},
   year      = {1987},
 }
 
+@online{Noordzij:Meaning,
+author = {Gerrit Noordzij},
+title={The meaning of writing},
+  year={unknown},
+url={https://typemedia.org/noordzij/meaning-of-writing.html},
+}
+
 @book{Noordzij:1982:TheStrokeOfThePen,
 author = {Gerrit Noordzij},
   title={The Stroke of the Pen: Fundamental Aspects of Western Writing},
@@ -3699,11 +3713,18 @@ location = {Boston, Massachusetts, USA},
 series = {RIDT 91},
 url={https://typemedia.org/assets/download/The Shape of the Stroke, RIDT 1991, pp 34-42_low.pdf},}
 
+@inbook{Noordzij:1995:RuleOrLaw,
+author = {Gerrit Noordzij},
+title = {Rule or law},
+year = {1995},
+booktitle = {Jan Tschichold Reflections and Reappraisals},
+editor={Paul Barnes},
+url={https://hyphenpress.co.uk/journal/article/rule_or_law},
+}
+
 @book{Noordzij:2000:LetterLetter,
   title={Letterletter: An Inconsistent Collection of Tentative Theories that Do Not Claim Any Other Authority Than that of Common Sense},
 author = {Gerrit Noordzij},
-  isbn={9780881791754},
-  lccn={00049871},
   url={https://books.google.com/books?id=L6AQAQAAMAAJ},
   year={2000},
   publisher={Hartley \& Marks},
@@ -3718,6 +3739,13 @@ subtitle = {Theory of Writing},
 year = {2006},
 publisher = {Hyphen},
 note={Out of print. Only read p.~1--18 sample pdf},
+}
+
+@online{NoordzijKinross:2001:Interview,
+title={Robin Kinross interviews Gerrit Noordzij},
+author = {Gerrit Noordzij and Robin Kinross},
+  url={https://typemedia.org/noordzij/interview.html},
+  year={2001},
 }
 
 @Book{Norvig:1992:Paradigms,
