--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -4471,7 +4471,7 @@ backref=true,
 %-----------------------------------------------------------------
 % TODO: can this be replaced with use of plChunks?
 \RequirePackage{enumitem}[2019/06/20]
-\setlist[description]{font=\scshape}
+\setlist[description]{font=\scshape\mdseries}
 \setlist[itemize]{style=unboxed,itemindent=0cm}
 \setlist[enumerate]{style=unboxed,itemindent=0cm}
 %-----------------------------------------------------------------
