--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -1871,6 +1871,16 @@ title={Reshaping {Euler}: A collaboration with {Hermann Zapf}},
 author={Hans Hagen and Taco Hoekwater and {Volker RW} Schaa},
 }
 
+@techreport{HalfantSussman:1987:AbstractNumerical,
+author={Halfant, Matthew and  Sussman, Gerald Jay},
+year={1987},
+title={Abstraction in numerical methods},
+institution= {{MIT} {AI} Laboratory},
+series={{AI} {Memo}},
+number={997},
+url={https://dspace.mit.edu/handle/1721.1/6060},
+}
+
 @Book{Halloway:2009:Clojure,
   author    = {Halloway, Stuart},
   title     = {Programming Clojure},
@@ -1924,6 +1934,18 @@ author={Hans Hagen and Taco Hoekwater and {Volker RW} Schaa},
   publisher = {AP Professional},
   year      = {1994},
 }
+
+@book{HansonSussman:2021:SDFF,
+  title={Software Design for Flexibility},
+  subtitle={How to Avoid Programming Yourself Into a Corner},
+  author={Hanson, Chris and Sussman, Gerald Jay},
+  url={https://books.google.com/books?id=AOUbEAAAQBAJ},
+  year={2021},
+  publisher={MIT Press},
+  url={https://mitpress.mit.edu/books/software-design-flexibility},
+  note={haven't found free html or pdf versions yet},
+}
+
 
 @Online{Hartnett:2019:Lurie,
   author  = {Kevin Hartnett},
@@ -4513,6 +4535,26 @@ url={http://www.practicallyefficient.com/2017/10/13/from-boiling-lead-and-black-
   url       = {https://www.elsevier.com/books/oriented-projective-geometry/stolfi/978-0-12-672025-9},
   address   = {Boston, {MA}},
   year      = {1991},
+}
+
+
+@book{SussmanWisdom:2001:SICM,
+  author    = {Gerald J. Sussman and
+               Jack Wisdom and
+               Meinhard E. Mayer},
+  title     = {Structure and interpretation of classical mechanics},
+  publisher = {{MIT} Press},
+  year      = {2001},
+  url={https://groups.csail.mit.edu/mac/users/gjs/6946/sicm-html/book.html},
+}
+
+@book{SussmanWisdom:2015:SICM2,
+  author    = {Gerald J. Sussman and Jack Wisdom},
+  title     = {Structure and interpretation of classical mechanics},
+  publisher = {{MIT} Press},
+  year      = {2015},
+  edition={2nd edition},
+  url={https://mitpress.mit.edu/sites/default/files/titles/content/sicm_edition_2/book.html},
 }
 
 @book{SussmanWisdom:2013:FunctionalDifferentialGeometry,
