--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -4969,6 +4969,25 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
   year   = {2011},
 }
 
+@online{wiki:ArgumentFromAnalogy,
+    author = "{Wikipedia}",
+    title = "Argument from analogy",
+    url = 
+    "https://en.wikipedia.org/w/index.php?title=Argument_from_analogy",
+  }
+@online{wiki:ArgumentFromAnalogyFalse,
+    author = "{Wikipedia}",
+    title = "Argument from analogy",
+    url = 
+    "https://en.wikipedia.org/wiki/Argument_from_analogy#False_analogy",
+  }
+@online{wiki:ArgumentFromAuthority,
+    author = "{Wikipedia}",
+    title = "Argument from authority",
+    url = 
+    "https://en.wikipedia.org/w/index.php?title=Argument_from_authority",
+  }
+  
 @Online{wiki:LieGroup,
   author = {Wikipedia},
   title  = {Lie group},
