--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -4196,6 +4196,13 @@ url={https://www.lms.ac.uk/sites/lms.ac.uk/files/Publications/LMSHouseStyle.pdf}
   year          = {2012},
 }
 
+@book{Rybczynski:1986:Home,
+  title={Home: A Short History of an Idea},
+  author={Witold Rybczynski},
+  year={1986},
+  publisher={Viking},
+}
+
 @Article{SachsEtal:1991:3Draw,
   author  = {Emanuel Sachs and Andrew Roberts and David Stoops},
   title   = {{3-Draw}: A Tool for Designing {3D} Shapes},
