--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -3558,6 +3558,15 @@ url={http://tiro.com/Articles/mathematical_typesetting.pdf},
   year      = {1973},
 }
 
+@phdthesis{MItros:2007:ConstraintModules,
+author={Piotr Mitros},
+title={Constraint Satisfaction Modules:
+A Methodology for Analog Circuit Design},
+year={2007},
+institution={{MIT EECS}},
+url={https://dspace.mit.edu/handle/1721.1/42237},
+}
+
 @Book{Moise:1977:Topology,
   author    = {Edwin E. Moise},
   title     = {Geometric Topology in Dimensions 2 and 3},
