--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -3867,7 +3867,7 @@ RawFeature={
 \NewDocumentCommand{\scalars}{}{\mathsf{scalars}}
 \NewDocumentCommand{\vectors}{}{\mathsf{vectors}}
 %-----------------------------------------------------------------
-\NewDocumentCommand{\OneToOne}{}{1{\!}{\mathhyphen}{\!}1}
+\NewDocumentCommand{\OneToOne}{}{{\text{one-to-one}}}
 % TODO: just type in unicode directly instead?
 \NewDocumentCommand{\Set}{m}{\symscr{#1}}
 \NewDocumentCommand{\Space}{m}{\symbb{#1}}
