more refs; flushleft title

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -1085,6 +1085,15 @@ url={http://luc.devroye.org/fonts-24699.html},
   year    = {2002},
 }
 
+@inbook{Dijkstra:1975:TruthHurts,
+author={Edsger W. Dijkstra},
+title={How do we tell truths that might hurt?},
+year={1975},
+booktitle={Selected Writings on Computing: A Personal Perspective},
+publisher={Springer},
+url={http://www.cs.virginia.edu/~evans/cs655/readings/ewd498.html},
+}
+
 @online{DobieScottScott:2021:AtkinsonHyperlegible,
 author={Craig Dobie and Brad Scott and Elliott Scott},
 title={Atkinson Hyperlegible},
@@ -5747,6 +5756,13 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
   volume  = {Fall},
   journal = {KIAS Newsletter},
   year    = {2006},
+}
+
+@online{Yegge:2006:Nouns,
+author={Steve Yegge},
+title={Execution in the Kingdom of Nouns},
+year={2006},
+url={http://steve-yegge.blogspot.com/2006/03/execution-in-kingdom-of-nouns.html},
 }
 
 @Article{Zermelo:1930:SetTheory,
