--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -4144,12 +4144,12 @@ backref=true,
 \RequirePackage{titling}[2009/09/04]
 %\newfontfamily\titlefont[Scale=MatchUppercase]{Gill Sans MT}
 %\renewcommand{\maketitlehooka}{\titlefont}
-\pretitle{\begin{flushright}\Huge\mdseries\scshape}
-\posttitle{\par\end{flushright}\vskip 0.25em}
-\preauthor{\begin{flushright}\scshape\mdseries}
-\postauthor{\par\end{flushright}}
-\predate{\begin{flushright}\scshape\mdseries}
-\postdate{\par\end{flushright}}
+\pretitle{\begin{flushleft}\Huge\mdseries\scshape}
+\posttitle{\par\end{flushleft}\vskip 0.25em}
+\preauthor{\begin{flushleft}\scshape\mdseries}
+\postauthor{\par\end{flushleft}}
+\predate{\begin{flushleft}\scshape\mdseries}
+\postdate{\par\end{flushleft}}
 \setlength{\droptitle}{-80pt}
 %-----------------------------------------------------------------
 % Sectioning
